--- a/index.html
+++ b/index.html
@@ -482,6 +482,37 @@
             </li>
           </ul>
         </div>
+         <!-- 
+        <div class="footer-subscribe-wrapper">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label class="footer-subscribe-label">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="email-field"
+                placeholder="E-mail"
+              />
+            </label>
+            <button
+              type="submit"
+              name="email-subscribe-button"
+              class="subscribe-button"
+            >
+              Subscribe
+              <svg
+                class="subscribe-icon"
+                aria-label="icon-send"
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
+          -->
       </div>
     </footer>
 <!-- Modal window -->
@@ -494,6 +525,112 @@
       </button>
   </div>
 </div>
+
+<!--Modal content-->
+<!-- 
+<p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <form class="form">
+          <div class="modal-wrapper">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="modal-table">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg
+                class="modal-icon"
+                aria-label="icon-person"
+                width="18"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-wrapper">
+            <label class="form-label" for="phone-number">Phone</label>
+            <div class="modal-table">
+              <input
+                class="form-input"
+                type="text"
+                name="phone-number"
+                id="phone-number"
+              />
+              <svg
+                class="modal-icon"
+                aria-label="icon-phone"
+                width="18"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-wrapper">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="modal-table">
+              <input
+                class="form-input"
+                type="text"
+                name="user-email"
+                id="user-email"
+              />
+              <svg
+                class="modal-icon"
+                aria-label="icon-email"
+                width="18"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="text-wrapper-field">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="text-field"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-check-wrapper">
+            <input
+              class="modal-check visually visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            /><label class="modal-check-text" for="user-privacy">
+              <span class="modal-check-box">
+                <svg
+                  class="modal-icon-check"
+                  aria-label="icon-check-white"
+                  width="10"
+                  height="8"
+                >
+                  <use href="./images/icons.svg#icon-check-white"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="modal-link-text" href="">Privacy Policy</a></label
+            >
+          </div>
+
+          <button class="modal-button-submit" type="submit">Send</button>
+        </form>
+      </div>
+    </div> end modal window
+
+-->
+
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
