--- a/index.html
+++ b/index.html
@@ -482,7 +482,28 @@
             </li>
           </ul>
         </div>
-         <!-- 
+<!--jkl-->
+        <div class="footer-form-container">
+          <p class="footer-subscribe-desc">Subscribe</p>
+          <form class="footer-form" name="subscribe-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                name="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-arrow-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+
+          <!--
         <div class="footer-subscribe-wrapper">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-subscribe-form">
