--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             for Your Business
           </h1>
 
-          <button class="main-hero-button" type="button">Order Service</button>
+          <button class="main-hero-button" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -502,41 +502,10 @@
             </button>
           </form>
         </div>
-
-          <!--
-        <div class="footer-subscribe-wrapper">
-          <p class="footer-subscribe-text">Subscribe</p>
-          <form class="footer-subscribe-form">
-            <label class="footer-subscribe-label">
-              <input
-                class="subscribe-input"
-                type="email"
-                name="email-field"
-                placeholder="E-mail"
-              />
-            </label>
-            <button
-              type="submit"
-              name="email-subscribe-button"
-              class="subscribe-button"
-            >
-              Subscribe
-              <svg
-                class="subscribe-icon"
-                aria-label="icon-send"
-                width="24"
-                height="24"
-              >
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
-
-          -->
       </div>
     </footer>
 <!-- Modal window -->
+<!-- 
     <div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button class="modal-btn" type="button" data-modal-close="">
@@ -546,7 +515,134 @@
       </button>
   </div>
 </div>
+-->
 
+ <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <!-- Доцільніше тег стронг, але автоперевірка вимагає <p></p> -->
+        <!-- <strong class="modal-caption">
+          Leave your contacts and we will call you back
+        </strong> -->
+        <!-- Modal form -->
+        <form class="modal-form" name="call-back-form">
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                placeholder=""
+                required
+                minlength="3"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+              <!-- <svg class="modal-form-info" width="18" height="18">
+                  <use class="error" href="./images/icons.svg#icon-error"></use>
+                  <use class="success" href="./images/icons.svg#icon-success"></use>
+                </svg> -->
+            </div>
+          </div>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                placeholder=""
+                minlength="10"
+                maxlength="12"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+              <!-- <svg class="modal-form-info" width="18" height="18">
+                  <use class="error" href="./images/icons.svg#icon-error"></use>
+                  <use class="success" href="./images/icons.svg#icon-success"></use>
+                </svg> -->
+            </div>
+          </div>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                placeholder=""
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+              <!-- <svg class="modal-form-info" width="18" height="18">
+                    <use class="error" href="./images/icons.svg#icon-error"></use>
+                    <use class="success" href="./images/icons.svg#icon-success"></use>
+                  </svg> -->
+            </div>
+          </div>
+          <div class="form-comment-container">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-comment"
+              name="user-comment"
+              id="user-comment"
+              rows="7"
+              placeholder="Text input"
+              required
+              minlength="7"
+            ></textarea>
+          </div>
+          <div class="form-agrement-container">
+            <!-- Version 1 -->
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="modal-form-agrement" for="user-privacy">
+              <span class="agreement-checkbox">
+                <svg class="agrement-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              <!-- Version 2 -->
+              <!-- <input class="checkbox" type="checkbox" name="user-agreement" value="yes" /> -->
+              <!-- <span class="modal-form-desc"> -->
+              I accept the terms and conditions of the
+              <a
+                class="modal-form-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Privacy Policy
+              </a>
+              <!-- </span> -->
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
 <!--Modal content-->
 <!-- 
 <p class="modal-title">Leave your contacts and we will call you back</p>
