--- a/index.html
+++ b/index.html
@@ -516,133 +516,115 @@
   </div>
 </div>
 -->
-
- <div class="backdrop is-hidden" data-modal>
+<!-- 
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
+-->
+                
+<div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
-          <svg class="modal-icon-btn" width="8" height="8">
+          <svg class="modal-btn-ico" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
+        <p class="strong">Leave your contacts and we will call you back</p>
 
-        <p class="modal-caption">
-          Leave your contacts and we will call you back
-        </p>
-        <!-- Доцільніше тег стронг, але автоперевірка вимагає <p></p> -->
-        <!-- <strong class="modal-caption">
-          Leave your contacts and we will call you back
-        </strong> -->
-        <!-- Modal form -->
-        <form class="modal-form" name="call-back-form">
-          <div class="modal-form-container">
-            <label class="modal-form-label" for="user-name">Name</label>
-            <div class="modal-form-field">
+        <!-- Field NAME -->
+        <form>
+          <div class="input-box">
+            <label class="input-label" for="user-name">Name</label>
+            <div class="input-field">
               <input
-                class="modal-form-input"
+                class="modal-input"
                 type="text"
                 name="user-name"
                 id="user-name"
-                placeholder=""
-                required
+                autocomplete="on"
                 minlength="3"
+                required
               />
-              <svg class="modal-form-icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
-              <!-- <svg class="modal-form-info" width="18" height="18">
-                  <use class="error" href="./images/icons.svg#icon-error"></use>
-                  <use class="success" href="./images/icons.svg#icon-success"></use>
-                </svg> -->
             </div>
           </div>
-          <div class="modal-form-container">
-            <label class="modal-form-label" for="user-phone">Phone</label>
-            <div class="modal-form-field">
+
+          <!-- Field PHONE -->
+          <div class="input-box">
+            <label class="input-label" for="input-phone-id">Phone</label>
+            <div class="input-field">
               <input
-                class="modal-form-input"
+                class="modal-input"
                 type="tel"
-                name="user-phone"
-                id="user-phone"
-                placeholder=""
-                minlength="10"
-                maxlength="12"
-                required
+                name="input-phone"
+                id="input-phone-id"
+                autocomplete="on"
               />
-              <svg class="modal-form-icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
-              <!-- <svg class="modal-form-info" width="18" height="18">
-                  <use class="error" href="./images/icons.svg#icon-error"></use>
-                  <use class="success" href="./images/icons.svg#icon-success"></use>
-                </svg> -->
             </div>
           </div>
-          <div class="modal-form-container">
-            <label class="modal-form-label" for="user-email">Email</label>
-            <div class="modal-form-field">
+
+          <!-- Field E MAIL -->
+          <div class="input-box">
+            <label class="input-label" for="input-email-id">Email</label>
+            <div class="input-field">
               <input
-                class="modal-form-input"
+                class="modal-input"
                 type="email"
-                name="user-email"
-                id="user-email"
-                placeholder=""
-                required
+                name="input-email"
+                id="input-email-id"
+                autocomplete="on"
               />
-              <svg class="modal-form-icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
-              <!-- <svg class="modal-form-info" width="18" height="18">
-                    <use class="error" href="./images/icons.svg#icon-error"></use>
-                    <use class="success" href="./images/icons.svg#icon-success"></use>
-                  </svg> -->
             </div>
           </div>
-          <div class="form-comment-container">
-            <label class="modal-form-label" for="user-comment">Comment</label>
+
+          <!-- Field Textarea -->
+          <div class="input-box last-input-box">
+            <label class="input-label" for="user-comment"
+              ><span class="input-label-text">Comment</span></label
+            >
             <textarea
-              class="modal-form-comment"
+              class="text-area"
               name="user-comment"
               id="user-comment"
-              rows="7"
+              rows="10"
               placeholder="Text input"
-              required
-              minlength="7"
             ></textarea>
           </div>
-          <div class="form-agrement-container">
-            <!-- Version 1 -->
+
+          <!-- Check-BOX -->
+          <div class="policy-box">
             <input
-              class="visually-hidden"
+              class="modal-privacy-check visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
+              required
             />
-            <label class="modal-form-agrement" for="user-privacy">
-              <span class="agreement-checkbox">
-                <svg class="agrement-checkbox-icon" width="10" height="8">
+            <label class="policy" for="user-privacy">
+              <span class="modal-checkbox">
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
-                </svg>
-              </span>
-              <!-- Version 2 -->
-              <!-- <input class="checkbox" type="checkbox" name="user-agreement" value="yes" /> -->
-              <!-- <span class="modal-form-desc"> -->
-              I accept the terms and conditions of the
-              <a
-                class="modal-form-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Privacy Policy
-              </a>
-              <!-- </span> -->
-            </label>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="policy-text-link" href="">Privacy Policy</a></label
+            >
           </div>
-          <button class="modal-form-btn" type="submit">Send</button>
+          <button class="modal-submit-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
